--- a/style.css
+++ b/style.css
@@ -56,6 +56,26 @@ button {
     margin: 1em;
 }
 
+button:hover {
+    opacity: 90%;
+    cursor: pointer;
+    /* add shadow */
+}
+
+.black {
+    background-color: rgb(15, 15, 15);
+    color: white;
+    border: 2px solid crimson;
+    border-radius: 8px;
+}
+
+.utility {
+    background-color: whitesmoke;
+    color: black;
+    border: 2px solid crimson;
+    border-radius: 8px;
+}
+
 .scale-container {
     display: flex;
     justify-content: center;
